core/testData/annotator/perl/unreachableCode/unreachableDereference.code
sub some{
$self->die('test');
say '<error descr="Unreachable code">end</error>';
}